fixed scroll alignment and CV previewing

--- a/css/style.css
+++ b/css/style.css
@@ -173,15 +173,16 @@
   /* About section */
 
   .about-section {
-    height: 100vh;
+    height: 120vh !important;
     display: grid;
-    align-items: center;
-    margin-bottom: 50vh !important;
+    align-items: start !important; 
+    padding-top: 15vh !important; 
+    margin-bottom: 20vh !important;
   }
 
   .about-content-container {
     padding: 15px;
-    height: 50%;
+    height: 100%;
   }
 
   .about-title {
@@ -190,7 +191,8 @@
     font-size: 2.5rem !important;
     line-height: 105%;
     font-weight: 100;
-    margin-bottom: 5vh;
+    margin-top: 0 !important;
+    margin-bottom: 8vh !important;
   }
 
   .about-description {
@@ -225,7 +227,7 @@
     font-size: 2.5rem !important;
     line-height: 95%;
     font-weight: 100;
-    margin-bottom: 8vh;
+    margin: 15vh 0 !important;
   }
 
   .skills-list {
@@ -265,7 +267,7 @@
     font-size: 2.5rem !important;
     line-height: 70%;
     font-weight: 100;
-    margin-bottom: 10vh;
+    margin: 15vh 0 !important;
   }
 
   .projects-display {
@@ -280,7 +282,7 @@
     font-size: 1.1rem !important;
     font-family: var(--font-family-inter);
     color: var(--accent-color);
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
   }
 
   .project-thumbnail {
@@ -346,8 +348,9 @@
     font-size: 2.5rem !important;
     line-height: 140%;
     font-weight: 100;
-    margin-bottom: 5vh;
+    margin: 10vh 0 !important;
   }
+
 
   .contact-me-form {
     margin-bottom: 5vh;
@@ -535,7 +538,7 @@
     display: grid;
     align-items: center;
     justify-items: center;
-    height: 100vh;
+    height: 100vh !important;
     padding: 15px;
   }
 
@@ -583,10 +586,11 @@
 
   /* About section */
 
-  .about-section {
-    height: 100vh;
+   .about-section {
+    height: 100vh !important;
     display: grid;
-    align-items: center;
+    align-items: start !important; 
+    padding-top: 15vh !important; 
     margin-bottom: 20vh !important;
   }
 
@@ -636,7 +640,7 @@
     font-size: 3.5rem !important;
     line-height: 95%;
     font-weight: 100;
-    margin-bottom: 8vh;
+    margin: 15vh 0 !important;
   }
 
   .skills-list {
@@ -676,7 +680,7 @@
     font-size: 3.5rem !important;
     line-height: 70%;
     font-weight: 100;
-    margin-bottom: 10vh;
+    margin: 15vh 0 !important;
   }
 
   .projects-display {
@@ -741,8 +745,8 @@
 
   .contact-me-section {
     display: grid;
-    align-items: center;
-    height: 100vh;
+    align-items: start !important;
+    height: 120vh !important;
     margin-bottom: 15vh !important;
   }
 
@@ -757,7 +761,7 @@
     font-size: 3.5rem !important;
     line-height: 140%;
     font-weight: 100;
-    margin-bottom: 5vh;
+    margin: 10vh 0 !important;
   }
 
   .contact-me-form {
@@ -2756,7 +2760,7 @@
     font-size: 3.5rem;
     line-height: 90%;
     font-weight: 100;
-    margin-bottom: 5vh;
+    margin: 15vh 0;
   }
 
   .contact-me-form {
@@ -3143,18 +3147,19 @@
 
   .contact-me-section {
     display: grid;
-    align-items: start;
-    justify-items: center;
-    height: 80vh;
-    padding: 0 10vw;
-    margin: 0 !important;
+    align-items: start !important;
+    justify-items: start !important;
+    height: 100vh; 
+    padding: 0 15vw;
+   
   }
 
   .contact-me-content-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: start;
+    align-items: flex-start !important;
+    justify-content: start !important;  
+    min-width: 79vw;
     width: 100%;
     padding: 0 !important;
   }
@@ -3165,7 +3170,8 @@
     font-size: 3.5rem;
     line-height: 90%;
     font-weight: 100;
-    margin-bottom: 5vh;
+
+    margin-top: 20vh !important;
   }
 
   .contact-me-form {
